:sparkles: feat: version v2.0.0

--- a/conf/mihoyobbs.conf
+++ b/conf/mihoyobbs.conf
@@ -1,8 +1,8 @@
 # @name 米游社相关 cookie 获取
 # @version v1.0.0
 # @description 用于 quantumultx 获取米游币任务和签到任务所需 cookie 的 rewrite 文件
-# @author kayanoruko
-# @homepage https://github.com/kayanouriko/quantumultx-genshin-autosign-helper
+# @author kayanouriko
+# @homepage https://github.com/kayanouriko/quantumultx-mihoyobbs-auto-helper
 # @license MIT
 
 # mitm
