:sparkles: feat(config&gallery): update rewrite.conf and gallery.json

--- a/conf/mihoyobbs.conf
+++ b/conf/mihoyobbs.conf
@@ -6,9 +6,11 @@
 # @license MIT
 
 # mitm
-hostname = bbs-api.mihoyo.com, api-takumi.mihoyo.com
+hostname = bbs-api.mihoyo.com, api-takumi.mihoyo.com, example.com
 
 # 获取米游币任务功能需要的 cookie
-^https://bbs-api.mihoyo.com/apihub/api/getGameList url script-request-header https://raw.githubusercontent.com/kayanouriko/quantumultx-genshin-autosign-helper/main/conf/mihoyobbs.cookie.js
+^https://bbs-api.mihoyo.com/apihub/api/getGameList url script-request-header https://raw.githubusercontent.com/kayanouriko/quantumultx-mihoyobbs-auto-helper/main/src/mihoyobbs.cookie.js
 # 获取签到功能需要的 cookie
-^https://api-takumi.mihoyo.com/binding/api/getUserGameRoles url script-request-header https://raw.githubusercontent.com/kayanouriko/quantumultx-genshin-autosign-helper/main/conf/mihoyobbs.cookie.js
+^https://api-takumi.mihoyo.com/binding/api/getUserGameRoles url script-request-header https://raw.githubusercontent.com/kayanouriko/quantumultx-mihoyobbs-auto-helper/main/src/mihoyobbs.cookie.js
+# 脚本设置自定义
+^https://example.com/? url script-request-header https://raw.githubusercontent.com/kayanouriko/quantumultx-mihoyobbs-auto-helper/main/src/mihoyobbs.config.js
